[STYLE_ONLY] Added SortPom to quickstarts and sorted XTS' poms

--- a/XTS/raw-xts-api-demo/ear/pom.xml
+++ b/XTS/raw-xts-api-demo/ear/pom.xml
@@ -20,90 +20,88 @@
 ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 -->
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
-        <artifactId>xts-demo-all</artifactId>
-        <version>6.0.0.Final-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>xts-demo-ear</artifactId>
-    <packaging>ear</packaging>
+  <parent>
+    <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
+    <artifactId>xts-demo-all</artifactId>
+    <version>6.0.0.Final-SNAPSHOT</version>
+  </parent>
+  <artifactId>xts-demo-ear</artifactId>
+  <packaging>ear</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
-            <artifactId>xts-demo-war</artifactId>
-            <version>${project.version}</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
-            <artifactId>xts-demo-webservices</artifactId>
-            <version>${project.version}</version>
-            <type>war</type>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
+      <artifactId>xts-demo-war</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
+      <artifactId>xts-demo-webservices</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
+    </dependency>
+  </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-ear-plugin</artifactId>
-                <version>${version.ear.plugin}</version>
-                <configuration>
-                    <defaultJavaBundleDir>lib</defaultJavaBundleDir>
-                    <modules>
-                        <webModule>
-                            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
-                            <artifactId>xts-demo-war</artifactId>
-                            <contextRoot>/xts-demo</contextRoot>
-                        </webModule>
-                        <webModule>
-                            <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
-                            <artifactId>xts-demo-webservices</artifactId>
-                            <contextRoot>/xts-demo-webservices</contextRoot>
-                        </webModule>
-                    </modules>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.wildfly.plugins</groupId>
-                <artifactId>wildfly-maven-plugin</artifactId>
-                <version>${version.wildfly.plugin}</version>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>${version.lifecycle.mapping.plugin}</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.maven.plugins</groupId>
-                                        <artifactId>maven-ear-plugin</artifactId>
-                                        <versionRange>[2.10.1,)</versionRange>
-                                        <goals>
-                                            <goal>generate-application-xml</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore></ignore>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>${version.lifecycle.mapping.plugin}</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ear-plugin</artifactId>
+                    <versionRange>[2.10.1,)</versionRange>
+                    <goals>
+                      <goal>generate-application-xml</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-ear-plugin</artifactId>
+        <version>${version.ear.plugin}</version>
+        <configuration>
+          <defaultJavaBundleDir>lib</defaultJavaBundleDir>
+          <modules>
+            <webModule>
+              <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
+              <artifactId>xts-demo-war</artifactId>
+              <contextRoot>/xts-demo</contextRoot>
+            </webModule>
+            <webModule>
+              <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
+              <artifactId>xts-demo-webservices</artifactId>
+              <contextRoot>/xts-demo-webservices</contextRoot>
+            </webModule>
+          </modules>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.wildfly.plugins</groupId>
+        <artifactId>wildfly-maven-plugin</artifactId>
+        <version>${version.wildfly.plugin}</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
