--- a/pom.xml
+++ b/pom.xml
@@ -264,7 +264,9 @@
         <version.wildfly.plugin>1.1.0.Alpha10</version.wildfly.plugin>
         <version.wildfly.core>18.1.2.Final</version.wildfly.core>
         <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
-        
+        <version.sortpom>3.0.0</version.sortpom>
+
+        <sortpom.skip>true</sortpom.skip>
   </properties>
 
   <build>
@@ -279,5 +281,25 @@
             </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>com.github.ekryd.sortpom</groupId>
+              <artifactId>sortpom-maven-plugin</artifactId>
+              <version>${version.sortpom}</version>
+              <configuration>
+                  <skip>${sortpom.skip}</skip>
+                  <createBackupFile>false</createBackupFile>
+                  <sortProperties>true</sortProperties>
+              </configuration>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>sort</goal>
+                      </goals>
+                      <phase>verify</phase>
+                  </execution>
+              </executions>
+          </plugin>
+      </plugins>
   </build>
 </project>
