[STYLE_ONLY] Sorted *.xml files in XTS

--- a/XTS/raw-xts-api-demo/war/src/main/webapp/WEB-INF/web.xml
+++ b/XTS/raw-xts-api-demo/war/src/main/webapp/WEB-INF/web.xml
@@ -19,10 +19,10 @@
   (C) 2005-2006,
   @author JBoss Inc.
 -->
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	version="2.4">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/j2ee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+         version="2.4">
     <display-name>XML Transaction Service Demo Client</display-name>
 
     <description>XML Transaction Service Demo Client</description>
